Продолжаю писать тесты